关闭RSS全文输出，修复首页显示

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -27,7 +27,7 @@ params:
     mainSections:
         - posts
     featuredImageField: ""
-    rssFullContent: true
+    rssFullContent: false
     
     footer:
         since: 2025
