--- a/vercel.json
+++ b/vercel.json
@@ -7,19 +7,5 @@
   },
   "buildCommand": "hugo --gc --minify",
   "outputDirectory": "public",
-  "framework": "hugo",
-  "redirects": [
-    {
-      "source": "/:path*",
-      "has": [
-        {
-          "type": "host",
-          "value": "139010.xyz"
-        }
-      ],
-      "destination": "https://139010.xyz/:path*",
-      "permanent": true,
-      "statusCode": 301
-    }
-  ]
+  "framework": "hugo"
 }
